overflow fix for inventory tabs

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  width: torem(250);
+  min-width: torem(250);
   height: 100vh;
   gap: torem(19);
   justify-content: space-between;
